--- a/src/main/resources/template/table.xml
+++ b/src/main/resources/template/table.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--DOCTYPE sqlMap SYSTEM "http://qiniu.netcorner.cn/sqlMap.dtd"-->
 <!--合并xml文档,在sqlmap中的merge属性-->
-<sqlMap  merge="jobmate.base">
+<sqlMap  merge="datasource.base">
 </sqlMap>
